mdsvex setup plugins and styles

--- a/src/routes/blog/1.md
+++ b/src/routes/blog/1.md
@@ -9,15 +9,83 @@ tags:
 
 # {title}
 
+## heading 2
+
+### heading 3
+
 > {date}
+>
+> > Absent
 
 **Here's some stuff I use**
 
-```js
+_Here's italic line_
+
+```java
 // JavaScript goes here,
 // And will be syntax-highlighted!
+
+class HelloWorld {
+    public static void main(String[] args) {
+        System.out.println("Hello, World!"); 
+    }
+}
 ```
+
+```mermaid
+graph TD;
+    A-->B;
+    A-->C;
+    B-->D;
+    C-->D;
+```
+
+### Show the image
+
+![Squidy](https://cdn-icons-png.flaticon.com/64/3823/3823087.png)
+
+[My Github](https://github.com/xenogew)
+
+### Bullet list
 
 - SvelteKit
 - VS Code
 - Emojis 😎
+
+### Ordered list
+
+1. Cat
+2. Dog
+3. Dolphin `codename: Sarlaza`
+
+---
+
+~~The world is flat.~~
+
+### Table, Hope it's cool {#custom-worked-now}
+
+| Syntax    | Description |
+| --------- | ----------- |
+| Header    | Title       |
+| Paragraph | Text        |
+
+- [x] Write the press release
+- [ ] Update the website
+- [ ] Contact the media
+
+### Things that MDsvex still not support {#i-found-something-cool}
+
+#### Highlight ❌
+
+I need to highlight these ==very important words==.
+
+#### Definition List ❌
+
+term
+: definition
+
+#### Subscript / Superscript ❌
+
+H~2~O
+
+X^2^
