upgrade logics: add error handling, add published

--- a/src/routes/blog/1.md
+++ b/src/routes/blog/1.md
@@ -5,6 +5,7 @@ tags:
   - 'coding'
   - 'example'
   - 'markdown'
+published: true
 ---
 
 # {title}
@@ -63,7 +64,7 @@ class HelloWorld {
 
 - [x] Write the press release
 - [ ] Update the website
-- [ ] Contact the media
+- [x] Contact the media
 
 ### Things that MDsvex still not support {#i-found-something-cool}
 
