render first page with query first 12 posts of markdown file

--- a/src/routes/blog/contents/1.md
+++ b/src/routes/blog/contents/1.md
@@ -1,11 +1,14 @@
 ---
 title: Post One
+subtitle: 'A Post For example'
 date: '2021-12-14'
 tags:
   - 'coding'
   - 'example'
   - 'markdown'
 published: true
+author: 'me'
+sample: 'this is a sample Svelte + MDSVEX example...'
 ---
 
 # {title}
@@ -66,7 +69,7 @@ class HelloWorld {
 - [ ] Update the website
 - [x] Contact the media
 
-### Things that MDsvex still not support {#i-found-something-cool}
+### Things that MDsvex still not support lorem ipsum facalty hinge or some of runes debugger online quare quick quin wholesome offload folder pint time faboulous large gold of many many finnge else oops {#i-found-something-cool}
 
 #### Highlight ❌
 
